tcp and rename format

--- a/org/2019-11-11-java-se.org
+++ b/org/2019-11-11-java-se.org
@@ -1448,7 +1448,7 @@ public class Main {
 #+END_SRC
 *** generate
 ** network
-*** Socker
+*** Socket
 *** ServerSocket
 #+BEGIN_SRC java
 var s = new ServerSocket(8189);
