--- a/org/2021-08-28-udp.org
+++ b/org/2021-08-28-udp.org
@@ -1,6 +1,15 @@
 #+TITLE: udp
 #+STARTUP: indent
 #+FILETAGS: :network
+* format
+[[file:../img/udp_format.gif][udp format]]
+* checksum
+与ip checksum一样，不同在于包含了两部分额外的计算快
+[[file:../img/udp_checksum_field.gif][udp checksum field]]
+
+特点:
+- 算的时候多了一部分伪头(实际结构并不存储)
+- 不满2bytes偶数的情况下pad 0(实际结果并不存储)
+- 计算值为0时之位65535，不计算时值才可设定为0
 * 注意事项
 tcp和udp，是可以占用同一个端口的，只是不常见，因为本质上从ip层demultiplex的过程根据ip header和协议和端口，所以是可以完全端口并不是完全的标识符
-
